# qaqbanking-lib

./: CMakeLists.txt  QAqBankingConfig.cmake.in  QAqBankingConfigVersion.cmake.in  QIABankingConfig.cmake.in  config.h.in  mt940.txt  testconfig.h.in
cmake/: BuildUtil.cmake
src/: CMakeLists.txt  accountinfo.cpp  accountinfo.h  accountinfobuilder.h  imexportercontext.cpp  imexportercontext.h  state.cpp  state.h
src/dtaus/: exportbuilder.h  exporter.cpp  exporter.h  transaction.cpp  transaction.h  transactionbuilder.h
src/private/: exporter.cpp  exporter_p.h
src/sepa/: exporter.cpp  exporter.h  transaction.cpp  transaction.h
src/swift/: importer.cpp  importer.h  transaction.cpp  transaction.h
test/: CMakeLists.txt  accountinfotest.cpp  exportertest.cpp  imexportercontexttest.cpp  mainswifttest.cpp  sepaexportertest.cpp  swiftimportertest.cpp  swifttransactiontest.cpp  transactiontest.cpp
